--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/quality 
+server.port=8083
+spring.datasource.url=jdbc:mysql://localhost:3306/evaluacionJQ 
 spring.datasource.username=root
 spring.datasource.password=abril010992
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
